--- a/views/register.ejs
+++ b/views/register.ejs
@@ -21,7 +21,7 @@
                 <input type="text" name="designation" class="form-control mb-3" placeholder="Designation">
             </div>
             <div id="student-fields">
-                <input type="text" name="year" class="form-control mb-3" placeholder="Current Year (e.g. 3)">
+                <input type="text" name="year" class="form-control mb-3" placeholder="Roll Number">
             </div>
             <button class="btn btn-primary w-100">Register</button>
         </form>
