--- a/views/student-dash.ejs
+++ b/views/student-dash.ejs
@@ -222,7 +222,7 @@ body{
 
 <div class="nav">
     <a href="/student-dash" class="active">🔍<br>Explore</a>
-    <a href="/my-applications">📝<br>My Applications</a>
+    <a href="/my-applications">📝<br>Track Applications</a>
     <a href="/profile">👤<br>Profile</a>
 </div>
 
