--- a/views/my-apps.ejs
+++ b/views/my-apps.ejs
@@ -177,7 +177,7 @@ body{
 <!-- Bottom Navigation -->
 <div class="mobile-nav">
     <a href="/student-dash" class="nav-item"><div>🔍</div>Explore</a>
-    <a href="/my-applications" class="nav-item active"><div>📝</div>My Apps</a>
+    <a href="/my-applications" class="nav-item active"><div>📝</div>Track Applications</a>
     <a href="/profile" class="nav-item"><div>👤</div>Profile</a>
 </div>
 
