--- a/views/student-dash.ejs
+++ b/views/student-dash.ejs
@@ -253,8 +253,8 @@ body{
 
 <!-- Bottom Navigation -->
 <div class="mobile-nav">
-    <a href="/student-dash" class="nav-item"><div>🔍</div>Explore</a>
-    <a href="/my-applications" class="nav-item active"><div>📝</div>Track Applications</a>
+    <a href="/student-dash" class="nav-item active"><div>🔍</div>Explore</a>
+    <a href="/my-applications" class="nav-item"><div>📝</div>Track Applications</a>
     <a href="/profile" class="nav-item"><div>👤</div>Profile</a>
 </div>
 
